k8s/02-db-core.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: core-db
  namespace: hermes
spec:
  serviceName: "core-db"
  replicas: 1
  selector:
    matchLabels:
      app: core-db
  template:
    metadata:
      labels:
        app: core-db
    spec:
      containers:
      - name: timescaledb
        image: timescale/timescaledb:2.21.4-pg15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: core-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: core-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: core-db
  namespace: hermes
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: core-db
  clusterIP: None # Headless service for StatefulSet
